@@ -1,4 +1,4 @@
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.041.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.008.
 use strict;
 use warnings;
 
@@ -34,7 +34,7 @@ my %WriteMakefileArgs = (
   "TEST_REQUIRES" => {
     "ExtUtils::MakeMaker" => 0,
     "File::Spec" => 0,
-    "Test::More" => "0.89"
+    "Test::More" => 0
   },
   "VERSION" => "0.001006",
   "test" => {
@@ -50,7 +50,7 @@ my %FallbackPrereqs = (
   "File::Spec" => 0,
   "Moose" => 0,
   "Moose::Util::TypeConstraints" => 0,
-  "Test::More" => "0.89",
+  "Test::More" => 0,
   "strict" => 0,
   "warnings" => 0
 );
