@@ -25,16 +25,16 @@ Valid values:
 
 # AUTHOR
 
-Kent Fredric &lt;kentnl@cpan.org>
+Kent Fredric <kentnl@cpan.org>
 
 # CONTRIBUTORS
 
-- David Golden &lt;dagolden@cpan.org>
-- Karen Etheridge &lt;ether@cpan.org>
+- David Golden <dagolden@cpan.org>
+- Karen Etheridge <ether@cpan.org>
 
 # COPYRIGHT AND LICENSE
 
-This software is copyright (c) 2015 by Kent Fredric &lt;kentfredric@gmail.com>.
+This software is copyright (c) 2017 by Kent Fredric <kentfredric@gmail.com>.
 
 This is free software; you can redistribute it and/or modify it under
 the same terms as the Perl 5 programming language system itself.
