@@ -1,6 +1,17 @@
 This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL dependencies for all phases (configure/build/runtime/test/develop)
 
 0.001006
+ [Added / develop requires]
+ - Test::MinimumVersion
+
+ [Changed / develop requires]
+ - Dist::Zilla::Plugin::Test::Compile::PerFile 0 → 0.003902
+
+ [Changed / develop suggests]
+ - Dist::Zilla::PluginBundle::Author::KENTNL 2.025003 → 2.025020
+
+ [Changed / test requires]
+ - Test::More 0.89 → 0
 
 0.001005 2015-11-14T04:44:40Z
  [Added / develop requires]
