@@ -1,6 +1,14 @@
 Release history for Dist-Zilla-Plugin-Author-KENTNL-CONTRIBUTING
 
 {{$NEXT}}
+ [Bugfix]
+ - Avoid test failures on 5.26 w/ -Ddefault_inc_excludes_dot
+ - Closes https://github.com/kentnl/Dist-Zilla-Plugin-Author-KENTNL-CONTRIBUTING/issues/2
+
+ [Dependencies::Stats]
+ - Dependencies changed since 0.001005, see misc/*.deps* for details
+ - develop: +1 ↑1 (suggests: ↑1)
+ - test: ↓1
 
 0.001005 2015-11-14T04:44:40Z 09c7edb
  - switched from [GenerateFile::ShareDir] to [GenerateFile::FromShareDir], closes #1
